[package]
name = "libelp-proc-internal"
version = "0.1.0"
edition = "2024"

[[example]]
name = "error_handling_example"
path = "examples/error_handling_example.rs"

[dependencies]
darling = "0.21"
litrs = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
thiserror = "2.0"
toml = "0.8"
